# Module-3-DevSecOps-Example

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: Bandit.yml  Gitleaks.yml  codeql.yml  main.yml  sast.yml  secrets.yml  trivy.yml  trivy_scanning.yml
